again fixing the overflow of body

--- a/contact/style.css
+++ b/contact/style.css
@@ -9,11 +9,12 @@
     color: inherit;
 }
 
-body {
+html , body {
     margin: 0;
     padding: 0;
     /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     overflow-x: hidden;
+    width: 100%;
 
 }
 
