--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@
     color: inherit;
 }
 
+html,
 body {
     margin: 0;
     padding: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     overflow-x: hidden;
+    width: 100%;
 
 }
 
@@ -251,7 +253,7 @@ button img {
 }
 
 .logo {
-    font-size: calc(1.4rem , 4.8vw);
+    font-size: calc(1.4rem, 4.8vw);
     font-weight: 500;
 }
 
@@ -318,7 +320,7 @@ button img {
     } */
 
     .navlinks {
-        position: absolute;
+        position: fixed;
         top: 0;
         right: -50vw;
         width: 50vw;
